--- a/.github/workflows/load-config.yaml
+++ b/.github/workflows/load-config.yaml
@@ -99,15 +99,20 @@ jobs:
         uses: actions/checkout@v2
         with: ###########  REMOVE THIS WHEN MERGING IN MASTER
           ref: hms-merge #####################################
-      - name: Fill if empty
+      - name: Set environment
+        id: set-environments
         run: |
           if [ -z "${{ github.event.inputs.environment_name }}" ]; then
             echo "environment_name is empty, setting to default"
             echo "environment_name=all" >> $GITHUB_OUTPUT
+          else
+            echo "environment_name=${{ github.event.inputs.environment_name }}" >> $GITHUB_OUTPUT
           fi
           if [ -z "${{ github.event.inputs.environment_type }}" ]; then
             echo "environment_type is empty, setting to default"
             echo "environment_type=staging and production" >> $GITHUB_OUTPUT
+          else
+            echo "environment_type=${{ github.event.inputs.environment_type }}" >> $GITHUB_OUTPUT
           fi
       - name: Validate input against config
         run: |
@@ -127,8 +132,8 @@ jobs:
         run: |
           CONFIG_FILE=$(cat deployment-config.json | jq .)
 
-          ENV_NAME="${{ github.event.inputs.environment_name }}"
-          ENV_TYPE="${{ github.event.inputs.environment_type }}"
+          ENV_NAME="${{ steps.set-environments.outputs.environment_name }}"
+          ENV_TYPE="${{ steps.set-environments.outputs.environment_type }}"
 
           # If "all" is chosen, we use a regex that matches anything
           if [ "$ENV_NAME" = "all" ]; then
