--- a/.github/workflows/load-config.yaml
+++ b/.github/workflows/load-config.yaml
@@ -119,9 +119,9 @@ jobs:
           valid_options_json=$(echo '${{ needs.setup.outputs.environment_names }}' | jq '. += ["all"]')
           valid_options=($(echo $valid_options_json | jq -r '.[]'))
 
-          echo "Selected environment name: ${{ github.event.inputs.environment_name }}"
+          echo "Selected environment name: ${{ steps.set-environments.outputs.environment_name }}"
 
-          if [[ " ${valid_options[@]} " =~ " ${{ github.event.inputs.environment_name }} " ]]; then
+          if [[ " ${valid_options[@]} " =~ " ${{ steps.set-environments.outputs.environment_name }} " ]]; then
             echo "Valid option selected"
             exit 0
           else
