--- a/.github/workflows/deploy-staging.yaml
+++ b/.github/workflows/deploy-staging.yaml
@@ -85,7 +85,7 @@ jobs:
           max_attempts: 30
           retry_on: error
           command: |
-            output=$(eksctl create fargateprofile --cluster biomage-staging --name worker-${SANDBOX_ID} --labels type=worker --namespace worker-${SANDBOX_ID} 2>&1)
+            output=$(eksctl create fargateprofile --cluster biomage-staging --region ${{ secrets.AWS_REGION }} --name worker-${SANDBOX_ID} --labels type=worker --namespace worker-${SANDBOX_ID} 2>&1)
             echo $output
             echo $output | grep "created Fargate profile"
           # Add jitter to break up correlated events.
@@ -101,7 +101,7 @@ jobs:
           max_attempts: 30
           retry_on: error
           command: |
-            output=$(eksctl create fargateprofile --cluster biomage-staging --name pipeline-${SANDBOX_ID} --labels type=pipeline --namespace pipeline-${SANDBOX_ID} 2>&1)
+            output=$(eksctl create fargateprofile --cluster biomage-staging --region ${{ secrets.AWS_REGION }} --name pipeline-${SANDBOX_ID} --labels type=pipeline --namespace pipeline-${SANDBOX_ID} 2>&1)
             echo $output
             echo $output | grep "created Fargate profile"
           # Add jitter to break up correlated events.
@@ -253,7 +253,7 @@ jobs:
           max_attempts: 30
           retry_on: error
           command: |
-            output=$(eksctl delete fargateprofile --cluster biomage-staging --name pipeline-${SANDBOX_ID} 2>&1)
+            output=$(eksctl delete fargateprofile --cluster biomage-staging --region ${{ secrets.AWS_REGION }} --name pipeline-${SANDBOX_ID} 2>&1)
             echo $output
             echo $output | egrep "deleted Fargate profile|No Fargate Profile found"
           # Add jitter to break up correlated events.
@@ -270,7 +270,7 @@ jobs:
           max_attempts: 30
           retry_on: error
           command: |
-            output=$(eksctl delete fargateprofile --cluster biomage-staging --name worker-${SANDBOX_ID} 2>&1)
+            output=$(eksctl delete fargateprofile --cluster biomage-staging --region ${{ secrets.AWS_REGION }} --name worker-${SANDBOX_ID} 2>&1)
             echo $output
             echo $output | egrep "deleted Fargate profile|No Fargate Profile found"
           # Add jitter to break up correlated events.
