--- a/charts/nodejs/templates/delete-pods-right-to-api.yaml
+++ b/charts/nodejs/templates/delete-pods-right-to-api.yaml
@@ -2,22 +2,22 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: can-manage-pods
+  name: can-delete-pods
 rules:
 - apiGroups: [""]
   resources: ["pods"]
-  verbs: ["delete", "list"]
+  verbs: ["delete"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: api-can-manage-pods
+  name: api-can-delete-pods
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: can-manage-pods
+  name: can-delete-pods
 subjects:
 - kind: ServiceAccount
   name: deployment-runner
-  namespace: {{ .Release.Namespace }}
-{{ end }}
+  namespace: {{ .Release.Namespace}}
+{{ end }}charts/nodejs/templates/api-can-manage-pods.yaml
