--- a/.github/workflows/deploy-changed-cf.yaml
+++ b/.github/workflows/deploy-changed-cf.yaml
@@ -264,7 +264,7 @@ jobs:
 
       - id: deploy-ses-template
         name: Deploy CloudFormation SES template
-        if: ${{ matrix.template == 'cf/ses.yaml' }}
+        if: ${{ matrix.template == 'cf/ses.yaml' && needs.load-config.outputs.should_deploy_ses == 'true' }}
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
          parameter-overrides: "Environment=${{ matrix.environment.type }},DomainName=${{ secrets.DOMAIN_NAME }},PrimaryDomainName=${{ secrets.PRIMARY_DOMAIN_NAME }}"
