--- a/.github/workflows/load-config.yaml
+++ b/.github/workflows/load-config.yaml
@@ -49,7 +49,7 @@ on:
         value: ${{ jobs.setup.outputs.excluded_services }}
       deployment_matrix:
         description: "All allowed combinations of environment name and environment type"
-        value: ${{ jobs.setup.outputs.deployment_matrix }}
+        value: ${{ jobs.generate-deployment-matrix.outputs.deployment_matrix }}
 
 
 jobs:
@@ -101,6 +101,8 @@ jobs:
     name: Generate deployment matrix based on the config files
     needs: setup
     runs-on: ubuntu-20.04
+    outputs:
+      deployment_matrix: ${{ steps.build-deployment-matrix.outputs.deployment_matrix }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -135,7 +137,8 @@ jobs:
             echo "Invalid option selected"
             exit 1
           fi
-      - name: Generate deployment matrix
+      - name: Build deployment matrix
+        id: build-deployment-matrix
         run: |
           CONFIG_FILE=$(cat deployment-config.json | jq .)
 
