Exclude subnet security group

--- a/deployment-config.json
+++ b/deployment-config.json
@@ -25,7 +25,8 @@
             ]
         },
         "excluded_services": [
-            "cf/rds-agent-security-group.yaml"
+            "cf/rds-agent-security-group.yaml",
+            "cf/rds-subnet-security-group.yaml"
         ]
     },
     "hms-dbmi-cellenics": {
@@ -48,7 +49,8 @@
         "excluded_services": [
             "cf/ses.yaml",
             "cf/doit-cloudhealth-role.yaml",
-            "cf/rds-agent-security-group.yaml"
+            "cf/rds-agent-security-group.yaml",
+            "cf/rds-subnet-security-group.yaml"
         ]
     }
 }
