--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -41,8 +41,8 @@ jobs:
     uses: biomage-org/iac/.github/workflows/load-config.yaml@hms-merge
     # uses: ./.github/workflows/load-config.yaml ## USE THIS WHEN MERGING IN MASTER
     with:
-      environment-name: ${{ github.event.inputs.environment_name }}
-      environment-type: ${{ github.event.inputs.environment_type }}
+      environment_name: ${{ github.event.inputs.environment_name }}
+      environment_type: ${{ github.event.inputs.environment_type }}
 
   check-secrets:
     name: Check that sufficient secrets are specified for environment name
