--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -485,7 +485,7 @@ jobs:
               .myAccount.accountId = strenv(AWS_ACCOUNT_ID) |
               .myAccount.publicFacing = strenv(PUBLIC_FACING) |
               .myAccount.acmCertificate = strenv(ACM_CERTIFICATE_ARN) |
-              .myAccount.selfSignedCertificate = strenv(SELF_SIGNED_CERTIFICATE) |
+              .myAccount.selfSignedCertificate = strenv(SELF_SIGNED_CERTIFICATE)
             ' infra/config/account-config.yaml
 
           if [[ -n "${{ secrets.DATADOG_API_KEY }}" ]]
@@ -494,7 +494,7 @@ jobs:
             export DATADOG_APP_KEY="${{ secrets.DATADOG_APP_KEY }}"
             yq -i '
               .myAccount.datadogAppKey = strenv(DATADOG_APP_KEY) |
-              .myAccount.datadogApiKey = strenv(DATADOG_API_KEY) |
+              .myAccount.datadogApiKey = strenv(DATADOG_API_KEY)
             ' infra/config/account-config.yaml
           fi
 
